Opened 17 years ago

Closed 17 years ago

#2016 closed bug (fixed)

mkdir() fails if pathname has a trailing '/' char.

Reported by: mjw Owned by: axeld
Priority: normal Milestone: R1
Component: System/Kernel Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

I have noticed that mkdir() fails if the pathname has got a trailing '/'. For example, mkdir("a/", 0777) will fail. This does not fail under Linux or Solairs, so I assume it is a Haiku bug.

I have supplied a test case.

Attachments (1)

mkdir_test.c (165 bytes ) - added by mjw 17 years ago.

Download all attachments as: .zip

Change History (4)

by mjw, 17 years ago

Attachment: mkdir_test.c added

comment:1 by nielx, 17 years ago

Confirmed. It also works on OSX.

[off-topic: mjw, I was working on git too, could you mail me with your progress? perhaps we can set up a shared repository?]

comment:2 by nielx, 17 years ago

More off-topic to mjw: I worked around the limitation in the git source and I am just going through the test suite. A lot of things work!

comment:3 by axeld, 17 years ago

Component: System/libroot.soSystem/Kernel
Resolution: fixed
Status: newclosed

Fixed in hrev24913, thanks Christian! BTW BeOS fails with this test as well.

Note: See TracTickets for help on using tickets.