Applied patch by Christian Fasshauer: * get_dir_path_and_leaf() now removes trailing slashes from the path. * This fixes bug #2016, thanks!

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@24913 a95241bf-73f2-0310-859d-f6bbb57e9c96